Fixed <Screen> positioning and WIP make videos play on mobile

--- a/src/styling/main.css
+++ b/src/styling/main.css
@@ -96,8 +96,8 @@ body {
 
 .react-player {
   position: absolute;
-  top: 3px;
-  left: 8px;
+  top: 1%;
+  left: 3%;
 }
 
 /* ____ANIMATIONS____ */
